adding featured products

--- a/tea-house.html
+++ b/tea-house.html
@@ -87,7 +87,71 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main class="container mx-auto mx-60">
+      <!-- featured section -->
+      <section class="text-center my-24">
+        <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
+        <p class="lg:max-w-3xl mx-auto">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words which don't look even slightly believable.
+        </p>
+
+        <!-- featured tea card container -->
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 gap-16 lg:grid-cols-4 my-12"
+        >
+          <!-- first-card -->
+          <div
+            class="flex flex-col flex-col items-center gap-8 bg-gradient-to-b from-[#465566] to-[#5d708600] px-10 py-10 rounded-lg"
+          >
+            <figure>
+              <img src="./resources/images/tea-1.png" alt="Shoes" />
+            </figure>
+            <h2 class="font-extrabold text-2xl">Milk Tea</h2>
+            <p class="font-semibold text-[1rem]">
+              Creamer could be replaced by fresh milk
+            </p>
+          </div>
+          <!-- second-card -->
+          <div
+            class="flex flex-col flex-col items-center gap-8 bg-gradient-to-b from-[#465566] to-[#5d708600] px-10 py-10 rounded-lg"
+          >
+            <figure>
+              <img src="./resources/images/tea-2.png" alt="Shoes" />
+            </figure>
+            <h2 class="font-extrabold text-2xl">Black Tea</h2>
+            <p class="font-semibold text-[1rem]">
+              Creamer could be replaced by fresh milk
+            </p>
+          </div>
+          <!-- third-card -->
+          <div
+            class="flex flex-col flex-col items-center gap-8 bg-gradient-to-b from-[#465566] to-[#5d708600] px-10 py-10 rounded-lg"
+          >
+            <figure>
+              <img src="./resources/images/tea-3.png" alt="Shoes" />
+            </figure>
+            <h2 class="font-extrabold text-2xl">Lemon Tea</h2>
+            <p class="font-semibold text-[1rem]">
+              Creamer could be replaced by fresh milk
+            </p>
+          </div>
+          <!-- fourth-card -->
+          <div
+            class="flex flex-col flex-col items-center gap-8 bg-gradient-to-b from-[#465566] to-[#5d708600] px-10 py-10 rounded-lg"
+          >
+            <figure>
+              <img src="./resources/images/tea-4.png" alt="Shoes" />
+            </figure>
+            <h2 class="font-extrabold text-2xl">Green Tea</h2>
+            <p class="font-semibold text-[1rem]">
+              Creamer could be replaced by fresh milk
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
