adding great tea fresh tea section

--- a/tea-house.html
+++ b/tea-house.html
@@ -51,7 +51,7 @@
     <header class="container mx-auto">
       <div class="hero">
         <div
-          class="mt-10 hero-content flex-col md:flex-row lg:flex-row flex-col-reverse gap-40"
+          class="mt-10 hero-content flex-col md:flex-row lg:flex-row flex-col-reverse gap-10 md:gap-40 lg:gap-40"
         >
           <div>
             <h1 class="text-7xl font-bold">
@@ -87,11 +87,12 @@
         </div>
       </div>
     </header>
+
     <main class="container mx-auto mx-60">
       <!-- featured section -->
-      <section class="text-center my-24">
+      <section class="text-center my-24 mx-5">
         <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
-        <p class="lg:max-w-3xl mx-auto">
+        <p class="lg:max-w-3xl mx-auto font-medium text-[1rem]">
           There are many variations of passages of Lorem Ipsum available, but
           the majority have suffered alteration in some form, by injected
           humour, or randomised words which don't look even slightly believable.
@@ -149,6 +150,48 @@
               Creamer could be replaced by fresh milk
             </p>
           </div>
+        </div>
+      </section>
+
+      <!-- great tea section  -->
+      <section class="my-24 mx-5 flex flex-col lg:flex-row gap-12">
+        <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
+          <div
+            class="h-36 bg-gradient-to-r from-[#fff2eb34] to-[#ff88383b] rounded-xl"
+          ></div>
+          <div
+            class="row-span-2 rounded-xl bg-[#E6A6231A] px-8 py-12 flex justify-center items-center"
+          >
+            <img src="./resources/images/fresh-1.png" alt="" />
+          </div>
+          <div
+            class="row-span-2 rounded-xl bg-[#5776391A] px-8 py-12 flex justify-center items-center"
+          >
+            <img src="./resources/images/fresh-2.png" alt="" />
+          </div>
+          <div
+            class="h-36 bg-gradient-to-r from-[#d9d9d934] to-[#ffffff33] rounded-xl"
+          ></div>
+        </div>
+        <div class="flex flex-col gap-8 flex-1">
+          <h3 class="text-5xl font-extrabold">Great Tea, Freshly Presented</h3>
+          <p class="text-lg">
+            The meaning of gong cha is chanese is to provide the best tea to
+            emperor from all possessions . It represents the highest quality and
+            self expectation. Establishing in 2006, Gong cha had been deeply
+            appreciated by its custoers because of good words of mouth and
+            unique customized service orginated from Taiwan.
+          </p>
+          <h5 class="text-2xl font-extrabold">Unique Taste</h5>
+          <p class="text-lg pr-80">
+            A Unique and different style from other teapots gives a luxurious
+            and minimalist impression
+          </p>
+          <h5 class="text-2xl font-extrabold">Premium Quality</h5>
+          <p class="text-lg pr-80">
+            Premium Quality that makes tea more elegant and more durable when
+            you use it.
+          </p>
         </div>
       </section>
     </main>
