--- a/tea-house.html
+++ b/tea-house.html
@@ -197,41 +197,91 @@
 
       <!-- super client -->
       <section
-        class="my-24 mx-5 bg-gradient-to-r to-[#FF0000] from-[#FF8938] p-20 rounded-xl flex flex-col lg:flex-row gap-12"
+        class="my-24 mx-5 bg-gradient-to-r to-[#FF0000] from-[#FF8938] p-5 lg:p-20 rounded-xl flex flex-col lg:flex-row gap-12"
       >
-        <div class="space-y-5">
-          <h2 class="text-5xl font-extrabold text-white leading-normal">
-            Meet Our Super <br />
-            Clients
-          </h2>
-          <p class="text-white font-medium text-[1rem]">
-            There are many variations of passages of Lorem Ipsum available, but
-            the majority have suffered alteration in some form, by injected
-            humour, or randomised words which don't look even slightly
-            believable.
-          </p>
-          <div class="bg-white inline-block px-5 py-4 rounded-lg">
-            <button
-              class="text-4xl font-bold bg-gradient-to-r from-[#FF0000] to-[#FF8938] text-transparent bg-clip-text text-xl font-bold"
-            >
-              Show All
-            </button>
+        <div class="flex items-center lg:pr-28">
+          <div class="space-y-5">
+            <h2 class="text-5xl font-extrabold text-white leading-normal">
+              Meet Our Super <br />
+              Clients
+            </h2>
+            <p class="text-white font-medium text-[1rem]">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+              slightly believable.
+            </p>
+            <div class="bg-white inline-block px-5 py-4 rounded-lg">
+              <button
+                class="text-4xl font-bold bg-gradient-to-r from-[#FF0000] to-[#FF8938] text-transparent bg-clip-text text-xl font-bold"
+              >
+                Show All
+              </button>
+            </div>
           </div>
         </div>
 
-        <!-- review -->
-        <div class="p-10 rounded-lg bg-white relative">
-          <img
-            class="absolute -top-5 -left-5"
-            src="./resources/images/client.png"
-            alt=""
-          />
-          <p class="text-[#777777]">
-            We are providing the best and suitable home insurance services for
-            the people who are interested to treatment
-          </p>
-          <h4 class="font-bold mt-5 text-[#1C1C1C]">Ilham Yuda</h4>
-          <p class="font-medium text-[#5D5A6F]">Businessman</p>
+        <!-- review container -->
+        <div class="relative">
+          <!-- next review -->
+          <div class="z-10 p-10 mb-16 rounded-lg bg-white relative opacity-50">
+            <img
+              class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+              src="./resources/images/client.png"
+              alt=""
+            />
+            <p class="text-[#777777]">
+              We are providing the best and suitable home insurance services for
+              the people who are interested to treatment
+            </p>
+            <div class="flex justify-between items-center">
+              <div>
+                <h4 class="font-bold mt-5 text-[#1C1C1C]">Ilham Yuda</h4>
+                <p class="font-medium text-[#5D5A6F]">Businessman</p>
+              </div>
+            </div>
+          </div>
+          <!-- current review -->
+          <div
+            class="z-20 p-10 top-40 lg:-left-32 lg:w-[430px] rounded-lg bg-white absolute"
+          >
+            <img
+              class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+              src="./resources/images/client.png"
+              alt=""
+            />
+            <p class="text-[#777777]">
+              We are providing the best and suitable home insurance services for
+              the people who are interested to treatment
+            </p>
+            <div class="flex justify-between items-center">
+              <div>
+                <h4 class="font-bold mt-5 text-[#1C1C1C]">Ilham Yuda</h4>
+                <p class="font-medium text-[#5D5A6F]">Businessman</p>
+              </div>
+              <div>
+                <img src="./resources/images/circles.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <!-- previous review -->
+          <div class="z-10 p-10 rounded-lg bg-white relative opacity-50">
+            <img
+              class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+              src="./resources/images/client.png"
+              alt=""
+            />
+            <p class="text-[#777777]">
+              We are providing the best and suitable home insurance services for
+              the people who are interested to treatment
+            </p>
+            <div class="flex justify-between items-center">
+              <div>
+                <h4 class="font-bold mt-5 text-[#1C1C1C]">Ilham Yuda</h4>
+                <p class="font-medium text-[#5D5A6F]">Businessman</p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
