adding all for desktop screen

--- a/tea-house.html
+++ b/tea-house.html
@@ -284,7 +284,158 @@
           </div>
         </div>
       </section>
+
+      <!-- news and events section -->
+      <section class="flex flex-col items-center justify-center gap-10">
+        <div class="flex flex-col items-center justify-center gap-6">
+          <h1 class="text-5xl font-extrabold">News & Events</h1>
+          <p class="px-56 text-center">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+        </div>
+        <!-- card container -->
+        <div class="grid grid-cols-3 gap-36">
+          <!-- card one -->
+          <div class="space-y-8 border-[0.5px] rounded-lg p-8">
+            <div>
+              <img src="./resources/images/news-1.png" alt="" />
+            </div>
+            <div class="space-y-4">
+              <p class="text-[1rem] font-medium">Feb 05, 2027</p>
+              <h3 class="text-xl font-extrabold">
+                Collecting 8 points for <br />
+                discount
+              </h3>
+              <p class="text-[1rem] font-medium leading-normal">
+                There are many variations of passages <br />
+                of Lorem Ipsum available.
+              </p>
+              <h4 class="text-[1rem] font-bold">Learn More</h4>
+            </div>
+          </div>
+          <!-- card two -->
+          <div class="space-y-8 border-[0.5px] rounded-lg p-8">
+            <div>
+              <img src="./resources/images/news-2.png" alt="" />
+            </div>
+            <div class="space-y-4">
+              <p class="text-[1rem] font-medium">Feb 05, 2027</p>
+              <h3 class="text-xl font-extrabold">
+                Collecting 8 points for <br />
+                discount
+              </h3>
+              <p class="text-[1rem] font-medium leading-normal">
+                There are many variations of passages <br />
+                of Lorem Ipsum available.
+              </p>
+              <h4 class="text-[1rem] font-bold">Learn More</h4>
+            </div>
+          </div>
+          <!-- card three -->
+          <div class="space-y-8 border-[0.5px] rounded-lg p-8">
+            <div>
+              <img src="./resources/images/news-3.png" alt="" />
+            </div>
+            <div class="space-y-4">
+              <p class="text-[1rem] font-medium">Feb 05, 2027</p>
+              <h3 class="text-xl font-extrabold">
+                Collecting 8 points for <br />
+                discount
+              </h3>
+              <p class="text-[1rem] font-medium leading-normal">
+                There are many variations of passages <br />
+                of Lorem Ipsum available.
+              </p>
+              <h4 class="text-[1rem] font-bold">Learn More</h4>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="lg:px-60 py-20 mt-40 bg-[#204056]">
+      <!-- logo section -->
+      <div class="flex justify-between">
+        <img src="./resources/images/cup.png" alt="" />
+        <div class="flex items-center gap-7">
+          <p class="text-xl font-medium">Ready to get started?</p>
+          <button
+            class="text-xl font-bold bg-gradient-to-r from-[#FF8938] to-[#FF0000] text-white px-5 py-4 rounded-lg"
+          >
+            Get Started
+          </button>
+        </div>
+      </div>
+      <!-- links  -->
+      <div class="mt-36 flex justify-between">
+        <!-- quick links -->
+        <div class="space-y-4">
+          <h3 class="text-xl font-semibold">Quick Links</h3>
+          <div class="space-y-3">
+            <p>Home</p>
+            <p>About Us</p>
+            <p>Insurance</p>
+            <p>Privacy Policy</p>
+          </div>
+        </div>
+        <!-- our service -->
+        <div class="space-y-4">
+          <h3 class="text-xl font-semibold">Our Services</h3>
+          <div class="space-y-3">
+            <p>Life Insurance</p>
+            <p>Car Insurance</p>
+            <p>Health Insurance</p>
+            <p>House Insurance</p>
+          </div>
+        </div>
+        <!-- help -->
+        <div class="space-y-4">
+          <h3 class="text-xl font-semibold">Help</h3>
+          <div class="space-y-3">
+            <p>FAQs</p>
+            <p>Contact Us</p>
+          </div>
+        </div>
+        <!-- subscribe -->
+        <div>
+          <h3 class="text-2xl font-semibold">
+            Subscribe to our <br />
+            newsletter
+          </h3>
+          <div
+            class="mt-10 grid grid-cols-2 items-center justify-around gap-40"
+          >
+            <div>
+              <p class="border-b-2">Emails address</p>
+            </div>
+            <div
+              class="w-8 h-8 flex items-center justify-center rounded-full bg-gradient-to-r from-[#FF8938] to-[#FF0000]"
+            >
+              <img
+                class="w-4 h-4"
+                src="./resources/images/right-arrow.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="mt-10 flex gap-6 items-center">
+            <img class="w-6 h-6" src="./resources/images/facebook.png" alt="" />
+            <img
+              class="w-6 h-6"
+              src="./resources/images/instagram.png"
+              alt=""
+            />
+            <img class="w-6 h-6" src="./resources/images/linkedin.png" alt="" />
+            <img class="w-6 h-6" src="./resources/images/twitter.png" alt="" />
+          </div>
+        </div>
+      </div>
+      <!-- copyright -->
+      <div class="mt-20 flex items-center justify-center">
+        <p>© 2027 UIDesign.to - All rights reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
